scripts_k8s/yamls/tsm/egress-quote-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: iexapis
spec:
  hosts:
  - cloud.iexapis.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
