scripts_k8s/yamls/tsm/gateway-web-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: acme-bank-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-ui
spec:
  hosts:
  - "*"
  gateways:
  - acme-bank-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: web-ui
        port:
          number: 8080
